cmake_minimum_required(VERSION 3.10)

project(nodebook)
add_subdirectory(src)
if(CMAKE_BUILD_TYPE STREQUAL "TEST")
  add_subdirectory(tests)
  add_executable(${PROJECT_NAME}_Tests tests/unit_tests.cpp)
  target_link_libraries(${PROJECT_NAME}_Tests tests src)
else()
  add_executable(${PROJECT_NAME} src/main.cpp)
  target_link_libraries(${PROJECT_NAME} src)
endif()
